# Multicore-Processor-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: MulticoreProcessor.drawio
include/: INSTRUCTION_ENUM.h  cache.h  core.h  cpu.h  instructionQueue.h  memStack.h  memory.h  node.h  processor.h
src/: cache.cpp  core.cpp  cpu.cpp  main.cpp  memory.cpp  node.cpp  processor.cpp
